--- a/test.css
+++ b/test.css
@@ -1,19 +1,19 @@
 
 .header{
 
-    background-image:  url("images/5.jpg");
+    background-image:  url("images/11.jpg");
     background-repeat:no-repeat;
     background-position: center;
     background-size: cover;
     height: 100vh;
     min-height: 400px;
-    color:#FFF;
+
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    background-color: #262626;
 }
 img{
     display: inline-block;
@@ -52,7 +52,7 @@ img{
 
 }
 .header_arrow a{
-    color: white;
+    color: black;
     transition: 0.5s;
 }
 .header_arrow a:hover{
@@ -63,16 +63,17 @@ img{
 .portfolio{
     padding-top: 0px;
     padding-bottom: 100px;
-    /*--background-color: ;--*/
+    background-color: #262626 ;
 }
 
 
 .title {
-    margin-top: 15px;
+    padding-top: 15px;
     font-size: 46px;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
     font-family: "Merriweather", serif;
     text-align: center;
+    background-color: #262626;
 }
 .name{
     font-size: 38px;
@@ -120,6 +121,7 @@ img{
 
 .row{
     padding-bottom: 10px;
+    background-color: #262626 ;
 }
 .col-4{
     width: 360px;
