--- a/test.css
+++ b/test.css
@@ -74,6 +74,7 @@ img{
     font-family: "Merriweather", serif;
     text-align: center;
     background-color: #262626;
+    color:white;
 }
 .name{
     font-size: 38px;
@@ -83,7 +84,7 @@ img{
 .name a{
     text-decoration: none;
     color: #000;
-    border-bottom: 1px solid #FFF;
+    
     transition: 0.5s;
 
 }
@@ -121,7 +122,7 @@ img{
 
 .row{
     padding-bottom: 10px;
-    background-color: #262626 ;
+
 }
 .col-4{
     width: 360px;
@@ -142,6 +143,7 @@ img{
 
 
 }
+
 .footer P{
     margin-top: 0PX;
     margin-bottom: 15PX;
