--- a/test.css
+++ b/test.css
@@ -5,6 +5,7 @@
     background-repeat:no-repeat;
     background-position: center;
     background-size: cover;
+    filter: brightness(80%);
     height: 100vh;
     min-height: 400px;
 
@@ -52,13 +53,37 @@ img{
 
 }
 .header_arrow a{
-    color: black;
+    color: white;
     transition: 0.5s;
 }
 .header_arrow a:hover{
-    color: #3eb5bb ;
+    color: #CCC6B3;
 
 }
+/*--description--*/
+.description{
+   background-color: #262626;
+    padding: 25px;
+
+}
+
+.left{
+    float: left;
+    margin-right: 30px;
+
+}
+.Ntitle{
+    font-size: 30px;
+}
+
+
+.description p{
+    text-align: left;
+    color: white;
+    font-family: 'Syne Tactile', cursive;
+
+}
+
 /*--portfolio--*/
 .portfolio{
     padding-top: 0px;
@@ -68,7 +93,7 @@ img{
 
 
 .title {
-    padding-top: 15px;
+
     font-size: 46px;
     padding-bottom: 30px;
     font-family: "Merriweather", serif;
@@ -83,14 +108,14 @@ img{
 }
 .name a{
     text-decoration: none;
-    color: #000;
-    
+    color: #FFF;
+
     transition: 0.5s;
 
 }
 .name a:hover{
-    color: #0052C2;
-    border-color: rgba(0, 82, 194, 0.3);
+    color: #CCC6B3;
+
 
 }
 .icon{
@@ -100,6 +125,7 @@ img{
 .text{
     font-size: 16px;
     line-height: 1.5;
+
 }
 .text p:hover{
     margin-top: 0px;
@@ -124,7 +150,9 @@ img{
     padding-bottom: 10px;
 
 }
+
 .col-4{
+    height: auto;
     width: 360px;
     margin-right: 30px;
     float:left;
@@ -164,7 +192,7 @@ p.footer_icons{
     font-size: 32px;
 }
 p.footer_icons a{
-    color: #fff;
+    color: #FFF;
     text-decoration: none;
     margin-right: 30px;
     transition: 1s;
@@ -208,6 +236,10 @@ p.footer_icons a:hover{
     .container{
         width: 100%;
 
+    }
+    .description{
+
+        display: none;
     }
     .col-4{
         width: 100;
